# a-minimum-python-package

./: README.md  env.bat  pyproject.toml
src/pkg/: cli.py
test/: Charm.py
