[build-system]
requires = ["setuptools","wheel","cython"]
build-backend = "setuptools.build_meta"


[project]
name = "mypkg"
version = "0.0.1"
requires-python = "==3.12.*"

[project.scripts]
harmonic = "pkg.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = false

[tool.setuptools.packages.find]
where = ["src"]
